--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="node_modules/normalize.css/normalize.css" type="text/css">
-    <link rel="stylesheet" href="../public/main.css" type="text/css">
+    <link rel="stylesheet" href="/public/main.css" type="text/css">
     <title>Ohmyfood! - Réservez le menu qui vous convient</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
     </div>
     <header>
         <div class="div-logo">
-            <img src="../assets/images/logo/ohmyfood@2x.svg" alt="ohmyfood logo" id="logo"> 
+            <img src="/assets/images/logo/ohmyfood@2x.svg" alt="ohmyfood logo" id="logo"> 
         </div>
     </header>
 
@@ -59,9 +59,9 @@
             <h2>Restaurants</h2>
             <div class="cards">
                 <article class="card">
-                    <a href="la-palette-du-gout.html">
+                    <a href="/pages/la-palette-du-gout.html">
                         <div class="card__new-tag">Nouveau</div>
-                        <img class="card__picture" src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du gout">
+                        <img class="card__picture" src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du gout">
                     <div class="card__details">
                         <div class="card__details__text">
                             <h3>La palette du goût</h3>
@@ -75,9 +75,9 @@
                     </a>
                 </article>
                 <article class="card">
-                    <a href="la-note-enchantee.html">
+                    <a href="/pages/la-note-enchantee.html">
                         <div class="card__new-tag">Nouveau</div>
-                        <img class="card__picture" src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantee">
+                        <img class="card__picture" src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantee">
                     <div class="card__details">
                         <div class="card__details__text">
                             <h3>La note enchantée</h3>
@@ -91,8 +91,8 @@
                     </a>
                 </article>
                 <article class="card">
-                    <a href="a-la-francaise.html">
-                        <img class="card__picture" src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la francaise">
+                    <a href="/pages/a-la-francaise.html">
+                        <img class="card__picture" src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la francaise">
                     <div class="card__details">
                         <div class="card__details__text">
                             <h3>À la française</h3>
@@ -106,8 +106,8 @@
                     </a>
                 </article>
                 <article class="card">
-                    <a href="le-delice-des-sens.html">
-                        <img class="card__picture" src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le delice des sens">
+                    <a href="/pages/le-delice-des-sens.html">
+                        <img class="card__picture" src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le delice des sens">
                     <div class="card__details">
                         <div class="card__details__text">
                             <h3>Le délice des sens</h3>
@@ -126,7 +126,7 @@
 
     <footer class="footer">
         <figure>
-            <img class="footer__img" src="../assets/images/logo/ohmyfood@2x.svg" alt="ohmyfood logo">
+            <img class="footer__img" src="/assets/images/logo/ohmyfood@2x.svg" alt="ohmyfood logo">
         </figure>
         <ul class="footer__ul">
             <li class="footer__ul__item"><span class="fas fa-utensils"></span><a href="#">Proposer un restaurant</a></li>
