--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="node_modules/normalize.css/normalize.css" type="text/css">
-    <link rel="stylesheet" href="/public/main.css" type="text/css">
+    <link rel="stylesheet" href="public/main.css" type="text/css">
     <title>Ohmyfood! - Réservez le menu qui vous convient</title>
 </head>
 <body>
