modify path arrow left icon

--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <a href="./index.html" class="fas fa-arrow-left"></a>
+        <a href="../index.html" class="fas fa-arrow-left"></a>
         <div class="div-logo">
             <img src="../assets/images/logo/ohmyfood@2x.svg" alt="ohmyfood logo" id="logo"> 
         </div>
